--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.example.metest.colortracktextview.TrackIndicatorView
+    <com.hongwei.basiclib.colortracktextview.TrackIndicatorView
         android:id="@+id/indicator_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +17,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="520dp"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/indicator_view"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
