--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -11,5 +11,6 @@
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:text="测试"
         android:textColor="#000000"/>
 </LinearLayout>
